--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Bop.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Bop.cfg
@@ -9,16 +9,16 @@
 		{
 			description = Bop is a small moon in the vicinity of Jool. In Kerbal mythology, Bop is believed to be the home of the Kraken, a mischievous creature said to play with the ships of hapless explorers, by spinning them out of control until torn asunder, then casting them into oblivion.
 			radius = 65000
-			geeASL = 0.0599999986588955
-			mass = 3.72615364760999E+19
+			geeASL = 0.0600204949543182
+			mass = 3.72610898343278E+19
 			gravParameter = 2486834944.41491
 			rotates = True
 			rotationPeriod = 544507.428516654
 			tidallyLocked = True
 			initialRotation = 230
 			inverseRotThresholdAltitude = 100000
-			albedo = 0.2
-			emissivity = 0.8
+			albedo = 0.200000002980232
+			emissivity = 0.800000011920929
 			coreTemperatureOffset = 10
 			isHomeWorld = False
 			timewarpAltitudeLimits = 0 24500 24500 24500 40000 60000 80000 100000
@@ -32,38 +32,38 @@
 			exactSearch = False
 			useTheInName = False
 			selectable = True
-			hiddenRnD = False
+			RDVisibility = VISIBLE
 			Biomes
 			{
 				Biome
 				{
 					name = Peaks
 					value = 0
-					color = 0,0.9176471,1,1
+					color = 0.866666675,0.800000012,0.654901981,1
 				}
 				Biome
 				{
 					name = Ridges
 					value = 0
-					color = 0.4745098,0.4823529,1,1
+					color = 0.768627465,0.698039234,0.545098066,1
 				}
 				Biome
 				{
 					name = Poles
 					value = 0
-					color = 1,0.6117647,0,1
+					color = 0.960784316,0.886274517,0.725490212,1
 				}
 				Biome
 				{
 					name = Slopes
 					value = 0
-					color = 1,0,0.7529412,1
+					color = 0.68235296,0.615686297,0.470588237,1
 				}
 				Biome
 				{
 					name = Valley
 					value = 0
-					color = 0.9882353,1,0,1
+					color = 0.592156887,0.549019635,0.450980395,1
 				}
 			}
 			ScienceValues
@@ -90,7 +90,7 @@
 			meanAnomalyAtEpoch = 0.899999976158142
 			meanAnomalyAtEpochD = 51.5662001957363
 			epoch = 0
-			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			color = 1,1,1,1
 			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
@@ -214,7 +214,7 @@
 					flattenTo = 900
 					innerRadius = 15000
 					outerRadius = 35000
-					position = -19468.5,5737.089,61828.13
+					position = -19468.5,5737.08887,61828.1289
 					smoothEnd = 0
 					smoothStart = 0
 					order = 11
@@ -231,7 +231,7 @@
 					cullBlack = False
 					DEBUG_HighlightInclusion = False
 					heightMapDeformity = 10
-					position = -19468.5,5737.089,61828.13
+					position = -19468.5,5737.08887,61828.1289
 					removeScatter = False
 					radius = 60000
 					smoothColor = 0.125
@@ -275,7 +275,7 @@
 					flattenTo = 2200
 					innerRadius = 4000
 					outerRadius = 15000
-					position = 2000,5737.089,61828.13
+					position = 2000,5737.08887,61828.1289
 					smoothEnd = 0
 					smoothStart = 0
 					order = 13
@@ -292,7 +292,7 @@
 					cullBlack = False
 					DEBUG_HighlightInclusion = False
 					heightMapDeformity = 10
-					position = 2000,5737.089,61828.13
+					position = 2000,5737.08887,61828.1289
 					removeScatter = False
 					radius = 20000
 					smoothColor = 0.125
@@ -315,8 +315,8 @@
 				VertexSimplexNoiseColor
 				{
 					blend = 1
-					colorStart = 0.1716418,0.1504306,0.1306527,1
-					colorEnd = 0.2910448,0.24074,0.2128536,1
+					colorStart = 0.171641767,0.15043062,0.130652696,1
+					colorEnd = 0.291044772,0.240739986,0.21285364,1
 					frequency = 1
 					octaves = 6
 					persistence = 0.5
