--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Dres.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Dres.cfg
@@ -9,8 +9,8 @@
 		{
 			description = Dres is a very small planet. It was the first planet considered to be a dwarf. It’s orbit is highly irregular and together with it’s size it took a long time to discover since half the time it was not where scientists expected to find a planet.Due to its nature of frequenting the bad parts of space. This dwarf planet was officially labeled as “Not to be trusted” by the scientific community.
 			radius = 138000
-			geeASL = 0.115
-			mass = 3.21913224453102E+20
+			geeASL = 0.115039284567105
+			mass = 3.21909365785247E+20
 			gravParameter = 21484488600
 			rotates = True
 			rotationPeriod = 34800
@@ -32,50 +32,50 @@
 			exactSearch = False
 			useTheInName = False
 			selectable = True
-			hiddenRnD = False
+			RDVisibility = VISIBLE
 			Biomes
 			{
 				Biome
 				{
 					name = Poles
 					value = 0
-					color = 1,0.9647059,0,1
+					color = 1,0.964705884,0,1
 				}
 				Biome
 				{
 					name = Midlands
 					value = 0
-					color = 0,1,0.9176471,1
+					color = 0,1,0.917647064,1
 				}
 				Biome
 				{
 					name = Lowlands
 					value = 0
-					color = 1,0,0.8,1
+					color = 1,0,0.800000012,1
 				}
 				Biome
 				{
 					name = Ridges
 					value = 0
-					color = 0.1058824,0.3568628,0.172549,1
+					color = 0.105882354,0.356862754,0.172549024,1
 				}
 				Biome
 				{
 					name = Highlands
 					value = 0
-					color = 0.9960784,0.5372549,0,1
+					color = 0.996078432,0.53725493,0,1
 				}
 				Biome
 				{
 					name = Impact Craters
 					value = 0
-					color = 0.09411765,0,1,1
+					color = 0.0941176489,0,1,1
 				}
 				Biome
 				{
 					name = Impact Ejecta
 					value = 0
-					color = 1,0.682353,0,1
+					color = 1,0.68235296,0,1
 				}
 				Biome
 				{
@@ -108,7 +108,7 @@
 			meanAnomalyAtEpoch = 3.14000010490417
 			meanAnomalyAtEpochD = 179.908753681645
 			epoch = 0
-			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			color = 1,1,1,1
 			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
@@ -237,7 +237,7 @@
 				VertexSimplexNoiseColor
 				{
 					blend = 1
-					colorStart = 0.7686567,0.6996614,0.6530895,1
+					colorStart = 0.768656731,0.699661374,0.653089464,1
 					colorEnd = 0,0,0,1
 					frequency = 2
 					octaves = 12
@@ -269,7 +269,7 @@
 						Class
 						{
 							name = Beach
-							color = 0.1641791,0.1641791,0.1641791,1
+							color = 0.164179087,0.164179087,0.164179087,1
 							altitudeStart = 0.5
 							altitudeEnd = 0.550000011920929
 							lerpToNext = True
@@ -278,7 +278,7 @@
 						Class
 						{
 							name = Beach
-							color = 0.3731343,0.3731343,0.3731343,1
+							color = 0.373134315,0.373134315,0.373134315,1
 							altitudeStart = 0.550000011920929
 							altitudeEnd = 1
 							lerpToNext = False
