--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Duna.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Duna.cfg
@@ -9,8 +9,8 @@
 		{
 			description = Also known as the red dot that you can see if you squint at it really hard, Duna has long been a wonder to Kerbalkind.The planet has been held in much awe, due to its striking red color and stark contrast to the color green.
 			radius = 320000
-			geeASL = 0.300000011920929
-			mass = 4.51548115036107E+21
+			geeASL = 0.300102493404406
+			mass = 4.51542702477492E+21
 			gravParameter = 301363211975.098
 			rotates = True
 			rotationPeriod = 65517.859375
@@ -32,38 +32,92 @@
 			exactSearch = False
 			useTheInName = False
 			selectable = True
-			hiddenRnD = False
+			RDVisibility = VISIBLE
 			Biomes
 			{
 				Biome
 				{
 					name = Poles
 					value = 0
-					color = 1,0,0,1
+					color = 1,1,1,1
 				}
 				Biome
 				{
 					name = Midlands
 					value = 0
-					color = 0,1,0.1647059,1
+					color = 0.988235295,0.549019635,0.349019617,1
 				}
 				Biome
 				{
 					name = Lowlands
 					value = 0
-					color = 0,0.1882353,1,1
+					color = 0.913725495,0.41568628,0.192156866,1
 				}
 				Biome
 				{
 					name = Craters
 					value = 0
-					color = 0.682353,0,1,1
+					color = 0.717647076,0.396078438,0.00392156886,1
 				}
 				Biome
 				{
 					name = Highlands
 					value = 0
-					color = 0,0.9647059,1,1
+					color = 1,0.666666687,0.513725519,1
+				}
+				Biome
+				{
+					name = Midland Sea
+					value = 0
+					color = 1,0.568627477,0.00784313772,1
+				}
+				Biome
+				{
+					name = Northern Basin
+					value = 0
+					color = 0.709803939,0.160784319,0.13333334,1
+				}
+				Biome
+				{
+					name = Southern Basin
+					value = 0
+					color = 0.823529422,0.290196091,0.262745112,1
+				}
+				Biome
+				{
+					name = Northern Shelf
+					value = 0
+					color = 0.580392182,0.0705882385,0.0431372561,1
+				}
+				Biome
+				{
+					name = Midland Canyon
+					value = 0
+					color = 0.733333349,0.345098048,0.0352941193,1
+				}
+				Biome
+				{
+					name = Eastern Canyon
+					value = 0
+					color = 0.600000024,0.266666681,0,1
+				}
+				Biome
+				{
+					name = Western Canyon
+					value = 0
+					color = 0.435294122,0.192156866,0,1
+				}
+				Biome
+				{
+					name = Polar Highlands
+					value = 0
+					color = 0.90196079,0.90196079,0.90196079,1
+				}
+				Biome
+				{
+					name = Polar Craters
+					value = 0
+					color = 0.745098054,0.745098054,0.745098054,1
 				}
 			}
 			ScienceValues
@@ -90,7 +144,7 @@
 			meanAnomalyAtEpoch = 3.14000010490417
 			meanAnomalyAtEpochD = 179.908753681645
 			epoch = 0
-			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			color = 1,1,1,1
 			cameraSmaRatioBounds = 0.03 25
 		}
 		Atmosphere
@@ -109,8 +163,8 @@
 			temperatureCurveIsNormalized = False
 			temperatureLapseRate = 0.005
 			temperatureSeaLevel = 250
-			ambientColor = 0.3058824,0.187128,0.2347621,1
-			lightColor = 0.5094656,0.5884027,0.6431373,0
+			ambientColor = 0.305882365,0.187128037,0.234762117,1
+			lightColor = 0.509465635,0.588402689,0.643137276,0
 			addAFG = True
 			pressureCurve
 			{
@@ -171,7 +225,7 @@
 				ESun = 30
 				g = -0.85
 				innerRadius = 319800
-				invWaveLength = 14.84364,8.3426,5.84501,0.5
+				invWaveLength = 14.8436403,8.34259987,5.84501028,0.5
 				Km = 0.00015
 				Kr = 0.00125
 				outerRadius = 328000
@@ -179,7 +233,7 @@
 				scale = 0.7317083
 				scaleDepth = -0.25
 				transformScale = 0,0,0
-				waveLength = 0.5094656,0.5884027,0.6431373,0
+				waveLength = 0.509465635,0.588402689,0.643137276,0
 				outerRadiusMult = 1.025
 				innerRadiusMult = 0.975
 			}
@@ -210,7 +264,7 @@
 				rimColorRamp = BUILTIN/desert_atmogradient
 				rimColorRampScale = 1,1
 				rimColorRampOffset = 0,0
-				localLightDirection = 0.003771693,-1.30465E-07,0.999993,0
+				localLightDirection = 0.640664756,1.59069477E-05,-0.767820835,0
 				resourceMapScale = 1,1
 				resourceMapOffset = 0,0
 			}
@@ -473,7 +527,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.4701493,0.1805322,0.09698883,0
+							color = 0.470149279,0.180532217,0.0969888344,0
 							coverageBlend = 0.5
 							coverageFrequency = 8
 							coverageOctaves = 3
@@ -485,7 +539,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 0.8
-							noiseColor = 0.3358209,0.1979139,0.1209425,0
+							noiseColor = 0.335820913,0.19791387,0.120942496,0
 							noiseFrequency = 2
 							noiseOctaves = 8
 							noisePersistance = 0.7
@@ -544,7 +598,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.2835821,0.09938071,0.06772109,0
+							color = 0.283582091,0.0993807092,0.0677210912,0
 							coverageBlend = 0.01
 							coverageFrequency = 8
 							coverageOctaves = 3
@@ -556,7 +610,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 0.1
-							noiseColor = 0.2164179,0.1505235,0.1340499,0
+							noiseColor = 0.216417909,0.150523514,0.134049892,0
 							noiseFrequency = 9
 							noiseOctaves = 6
 							noisePersistance = 0.7
@@ -615,7 +669,7 @@
 						{
 							alterApparentHeight = 100
 							alterRealHeight = 100
-							color = 0.8656716,0.8656716,0.8656716,0
+							color = 0.865671635,0.865671635,0.865671635,0
 							coverageBlend = 0
 							coverageFrequency = 8
 							coverageOctaves = 3
@@ -627,7 +681,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0.100000001490116
 							noiseBlend = 0.2
-							noiseColor = 0.7686567,0.7686567,0.7686567,0
+							noiseColor = 0.768656731,0.768656731,0.768656731,0
 							noiseFrequency = 9
 							noiseOctaves = 6
 							noisePersistance = 0.2
@@ -691,7 +745,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.1343284,0.1124567,0.1042548,0
+							color = 0.134328365,0.112456717,0.104254849,0
 							coverageBlend = 0.5
 							coverageFrequency = 4
 							coverageOctaves = 5
@@ -703,7 +757,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0.100000001490116
 							noiseBlend = 1
-							noiseColor = 0.07462686,0.06493339,0.06404544,0
+							noiseColor = 0.074626863,0.0649333894,0.0640454441,0
 							noiseFrequency = 9
 							noiseOctaves = 6
 							noisePersistance = 0.2
@@ -865,7 +919,7 @@
 					DEBUG_HighlightInclusion = False
 					heightMap = BUILTIN/pyramid
 					heightMapDeformity = 100
-					position = -123617.5,-294525.7,-42850.8
+					position = -123617.5,-294525.688,-42850.8008
 					removeScatter = False
 					radius = 400
 					smoothColor = 0.125
