--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eeloo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eeloo.cfg
@@ -9,8 +9,8 @@
 		{
 			description = There’s been a considerable amount of controversy around the status of Eeloo as being a proper planet or a just “lump of ice going around the Sun”. The debate is still ongoing, since most academic summits held to address the issue have devolved into, on good days, petty name calling, and on worse ones, all-out brawls.
 			radius = 210000
-			geeASL = 0.172000005841255
-			mass = 1.11493578853835E+21
+			geeASL = 0.172058761891442
+			mass = 1.11492242417007E+21
 			gravParameter = 74410814527.0496
 			rotates = True
 			rotationPeriod = 19460
@@ -32,50 +32,74 @@
 			exactSearch = False
 			useTheInName = False
 			selectable = True
-			hiddenRnD = False
+			RDVisibility = VISIBLE
 			Biomes
 			{
 				Biome
 				{
 					name = Poles
 					value = 0
-					color = 1,0,0,1
+					color = 1,1,1,1
 				}
 				Biome
 				{
-					name = Glaciers
+					name = Northern Glaciers
 					value = 0
-					color = 0.6862745,0.3019608,0.8784314,1
+					color = 0.792156875,0.792156875,0.792156875,1
 				}
 				Biome
 				{
 					name = Lowlands
 					value = 0
-					color = 1,0,0.8235294,1
+					color = 0.482352942,0.639215708,0.905882359,1
 				}
 				Biome
 				{
 					name = Highlands
 					value = 0
-					color = 1,0.7294118,0,1
+					color = 0.835294127,0.854901969,0.882352948,1
 				}
 				Biome
 				{
 					name = Ice Canyons
 					value = 0
-					color = 0,1,0.09411765,1
+					color = 1,0.709803939,0.388235301,1
 				}
 				Biome
 				{
 					name = Craters
 					value = 0
-					color = 0.03529412,0.05098039,0.7254902,1
+					color = 0.87843138,0.533333361,0.13333334,1
 				}
 				Biome
 				{
 					name = Midlands
 					value = 0
-					color = 0.2666667,0.7058824,0.9529412,1
+					color = 0.745098054,0.807843149,0.909803927,1
+				}
+				Biome
+				{
+					name = Fragipan
+					value = 0
+					color = 1,0.80392158,0.580392182,1
+				}
+				Biome
+				{
+					name = Babbage Patch
+					value = 0
+					color = 0.592156887,0.701960802,0.894117653,1
+				}
+				Biome
+				{
+					name = Southern Glaciers
+					value = 0
+					color = 0.87843138,0.87843138,0.87843138,1
+				}
+				Biome
+				{
+					name = Mu Glacier
+					value = 0
+					color = 0.486274511,0.486274511,0.486274511,1
 				}
 			}
 			ScienceValues
@@ -102,7 +126,7 @@
 			meanAnomalyAtEpoch = 3.14000010490417
 			meanAnomalyAtEpochD = 179.908753681645
 			epoch = 0
-			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			color = 1,1,1,1
 			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
@@ -115,7 +139,7 @@
 			Material
 			{
 				color = 1,1,1,1
-				specColor = 0.07462686,0.07462686,0.07462686,1
+				specColor = 0.074626863,0.074626863,0.074626863,1
 				shininess = 0.4605465
 				texture = BUILTIN/snowydwarfplanet00
 				mainTex = BUILTIN/snowydwarfplanet00
@@ -200,7 +224,7 @@
 				hiHiEnd = 1
 				snowStart = 0.8
 				snowEnd = 1
-				fogColor = 0.7313433,0.7313433,0.7313433,1
+				fogColor = 0.731343269,0.731343269,0.731343269,1
 				heightFallOff = 1
 				globalDensity = -8E-06
 				atmosphereDepth = 55000
@@ -276,7 +300,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.5959972,0.6418923,0.6791044,0
+							color = 0.595997214,0.641892254,0.679104447,0
 							coverageBlend = 0.5
 							coverageFrequency = 8
 							coverageOctaves = 3
@@ -288,7 +312,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 0.8
-							noiseColor = 0.3731343,0.3612365,0.311815,0
+							noiseColor = 0.373134315,0.361236542,0.311815023,0
 							noiseFrequency = 0.5
 							noiseOctaves = 8
 							noisePersistance = 0.7
@@ -347,7 +371,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.3731343,0.3261469,0.2074418,0
+							color = 0.373134315,0.326146901,0.207441822,0
 							coverageBlend = 0.5
 							coverageFrequency = 8
 							coverageOctaves = 3
@@ -359,7 +383,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 0.8
-							noiseColor = 0.2462686,0.2275434,0.2057979,0
+							noiseColor = 0.24626863,0.227543369,0.205797896,0
 							noiseFrequency = 0.5
 							noiseOctaves = 8
 							noisePersistance = 0.7
@@ -418,7 +442,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.5970149,0.5970149,0.5970149,0
+							color = 0.597014904,0.597014904,0.597014904,0
 							coverageBlend = 0.5
 							coverageFrequency = 8
 							coverageOctaves = 3
@@ -430,7 +454,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 0.8
-							noiseColor = 0.2014925,0.1920078,0.1726073,0
+							noiseColor = 0.201492548,0.192007825,0.172607258,0
 							noiseFrequency = 0.5
 							noiseOctaves = 8
 							noisePersistance = 0.7
@@ -601,6 +625,7 @@
 					persistance = 0.7
 					seed = 78967456
 					mode = Low
+					noiseType = RiggedMultifractal
 					lacunarity = 3
 					order = 30
 					enabled = True
