--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eve.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Eve.cfg
@@ -9,8 +9,8 @@
 		{
 			description = Eve is certainly the purplest object in the solar system. It’s one of the larger, most visible objects, mainly because of its very, very purple tint.It is considered by some to be almost a sister planet to Kerbin. Well, despite the purple, and the toxic atmosphere, and the extreme press- ures and temperatures. Actually, it’s not very similar at all is it? Who are those people?
 			radius = 700000
-			geeASL = 1.70000004768372
-			mass = 1.22441268043315E+23
+			geeASL = 1.7005807760833
+			mass = 1.2243980038014E+23
 			gravParameter = 8171730229210.87
 			rotates = True
 			rotationPeriod = 80500
@@ -32,50 +32,98 @@
 			exactSearch = False
 			useTheInName = False
 			selectable = True
-			hiddenRnD = False
+			RDVisibility = VISIBLE
 			Biomes
 			{
 				Biome
 				{
 					name = Poles
 					value = 0
-					color = 0.9882353,1,0,1
+					color = 0.862745106,0.75686276,0.996078432,1
 				}
 				Biome
 				{
 					name = Midlands
 					value = 0
-					color = 0,0.8941177,1,1
+					color = 0.450980395,0.180392161,0.525490224,1
 				}
 				Biome
 				{
 					name = Explodium Sea
 					value = 0
-					color = 0.1176471,0,1,1
+					color = 0.694117665,0.349019617,0.513725519,1
 				}
 				Biome
 				{
 					name = Lowlands
 					value = 0
-					color = 0,1,0.1411765,1
+					color = 0.360784322,0.0980392173,0.435294122,1
 				}
 				Biome
 				{
 					name = Highlands
 					value = 0
-					color = 1,0,0,1
+					color = 0.541176498,0.286274523,0.611764729,1
 				}
 				Biome
 				{
 					name = Peaks
 					value = 0
-					color = 1,0.6352941,0,1
+					color = 0.65882355,0.443137258,0.729411781,1
 				}
 				Biome
 				{
 					name = Impact Ejecta
 					value = 0
-					color = 0.6862745,0.7176471,0.3137255,1
+					color = 0.654901981,0.396078438,0.980392158,1
+				}
+				Biome
+				{
+					name = Crater Lake
+					value = 0
+					color = 0.556862772,0.184313729,0.360784322,1
+				}
+				Biome
+				{
+					name = Western Sea
+					value = 0
+					color = 0.835294127,0.556862772,0.690196097,1
+				}
+				Biome
+				{
+					name = Olympus
+					value = 0
+					color = 1,1,1,1
+				}
+				Biome
+				{
+					name = Eastern Sea
+					value = 0
+					color = 0.41568628,0.0705882385,0.235294119,1
+				}
+				Biome
+				{
+					name = Craters
+					value = 0
+					color = 0.654901981,0.396078438,0.980392158,1
+				}
+				Biome
+				{
+					name = Foothills
+					value = 0
+					color = 0.811764717,0.650980413,0.854901969,1
+				}
+				Biome
+				{
+					name = Akatsuki Lake
+					value = 0
+					color = 0.729411781,0.568627477,0.741176486,1
+				}
+				Biome
+				{
+					name = Shallows
+					value = 0
+					color = 0.545098066,0.400000006,0.552941203,1
 				}
 			}
 			ScienceValues
@@ -102,7 +150,7 @@
 			meanAnomalyAtEpoch = 3.14000010490417
 			meanAnomalyAtEpochD = 179.908753681645
 			epoch = 0
-			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			color = 1,1,1,1
 			cameraSmaRatioBounds = 0.03 25
 		}
 		Atmosphere
@@ -121,8 +169,8 @@
 			temperatureCurveIsNormalized = False
 			temperatureLapseRate = 0.00453333333333333
 			temperatureSeaLevel = 408
-			ambientColor = 0.2235352,0.1943253,0.3058824,1
-			lightColor = 0.4498853,0.5149254,0.3473222,1
+			ambientColor = 0.223535195,0.194325268,0.305882365,1
+			lightColor = 0.449885309,0.514925361,0.347322196,1
 			addAFG = True
 			pressureCurve
 			{
@@ -184,7 +232,7 @@
 				ESun = 30
 				g = -0.85
 				innerRadius = 699562.5
-				invWaveLength = 24.4114,14.22404,68.7179,0.5
+				invWaveLength = 24.4114037,14.2240372,68.7178955,0.5
 				Km = 0.00015
 				Kr = 0.00125
 				outerRadius = 717500
@@ -192,7 +240,7 @@
 				scale = 0.3344953
 				scaleDepth = -0.25
 				transformScale = 0,0,0
-				waveLength = 0.4498853,0.5149254,0.3473222,1
+				waveLength = 0.449885309,0.514925361,0.347322196,1
 				outerRadiusMult = 1.025
 				innerRadiusMult = 0.975
 			}
@@ -223,7 +271,7 @@
 				rimColorRamp = BUILTIN/purple_atmogradiant
 				rimColorRampScale = 1,1
 				rimColorRampOffset = 0,0
-				localLightDirection = -0.9999947,-1.30465E-07,0.003267914,0
+				localLightDirection = 1,0,0,0
 				resourceMapScale = 1,1
 				resourceMapOffset = 0,0
 			}
@@ -418,7 +466,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.1764312,0.1231343,0.2462686,0
+							color = 0.176431224,0.123134315,0.24626863,0
 							coverageBlend = 0.5
 							coverageFrequency = 8
 							coverageOctaves = 3
@@ -430,7 +478,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 0.8
-							noiseColor = 0.2186464,0.1869325,0.2686567,0
+							noiseColor = 0.218646362,0.186932489,0.268656731,0
 							noiseFrequency = 2
 							noiseOctaves = 8
 							noisePersistance = 0.7
@@ -489,7 +537,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.2746667,0.2216887,0.358209,0
+							color = 0.274666727,0.221688747,0.358208954,0
 							coverageBlend = 0.5
 							coverageFrequency = 8
 							coverageOctaves = 3
@@ -501,7 +549,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 0.8
-							noiseColor = 0.144925,0.1272049,0.1865672,0
+							noiseColor = 0.144924998,0.127204895,0.186567187,0
 							noiseFrequency = 2
 							noiseOctaves = 8
 							noisePersistance = 0.7
@@ -560,7 +608,7 @@
 						{
 							alterApparentHeight = 0
 							alterRealHeight = 0
-							color = 0.0912884,0.08292452,0.1044776,0
+							color = 0.0912883952,0.082924515,0.104477584,0
 							coverageBlend = 0.5
 							coverageFrequency = 8
 							coverageOctaves = 3
@@ -572,7 +620,7 @@
 							lonDelta = 1
 							minimumRealHeight = 0
 							noiseBlend = 0.8
-							noiseColor = 0.2480204,0.2037105,0.2761194,0
+							noiseColor = 0.248020425,0.203710482,0.276119411,0
 							noiseFrequency = 2
 							noiseOctaves = 8
 							noisePersistance = 0.7
@@ -655,7 +703,7 @@
 								mainTex = BUILTIN/lunar cliff face
 								mainTexScale = 1,1
 								mainTexOffset = 0,0
-								color = 0.4617738,0.2195069,0.5147059,0.397
+								color = 0.461773813,0.219506919,0.514705896,0.397000015
 								diff = 0.1
 							}
 							Experiment
