--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Gilly.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Gilly.cfg
@@ -9,8 +9,8 @@
 		{
 			description = Gilly is a lumpy rock wandering around the orbit of Eve. It’s by far the smallest natural satellite that the Kerbal Astronomical Society has discovered.Due to the large amount of squinting and eye strain associated with its discovery, wearing glasses has now become synonymous with being an accomplished Astronomer.
 			radius = 13000
-			geeASL = 0.00499999988824129
-			mass = 1.24205121587E+17
+			geeASL = 0.00500170791285985
+			mass = 1.24203632781093E+17
 			gravParameter = 8289449.81471635
 			rotates = True
 			rotationPeriod = 28255
@@ -32,26 +32,26 @@
 			exactSearch = False
 			useTheInName = False
 			selectable = True
-			hiddenRnD = False
+			RDVisibility = VISIBLE
 			Biomes
 			{
 				Biome
 				{
 					name = Midlands
 					value = 0
-					color = 0.8901961,0,0.9960784,1
+					color = 0.796078444,0.631372571,0.36470589,1
 				}
 				Biome
 				{
 					name = Lowlands
 					value = 0
-					color = 0.9176471,0.007843138,0.3843137,1
+					color = 0.647058845,0.505882382,0.278431386,1
 				}
 				Biome
 				{
 					name = Highlands
 					value = 0
-					color = 0.02352941,0,0.9960784,1
+					color = 0.917647064,0.792156875,0.588235319,1
 				}
 			}
 			ScienceValues
@@ -78,7 +78,7 @@
 			meanAnomalyAtEpoch = 0.899999976158142
 			meanAnomalyAtEpochD = 51.5662001957363
 			epoch = 0
-			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			color = 1,1,1,1
 			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
@@ -235,8 +235,8 @@
 				VertexSimplexNoiseColor
 				{
 					blend = 1
-					colorStart = 0.641791,0.5159777,0.4885275,1
-					colorEnd = 0.2910448,0.2733044,0.2167571,1
+					colorStart = 0.641791046,0.51597774,0.488527536,1
+					colorEnd = 0.291044772,0.273304433,0.216757119,1
 					frequency = 1
 					octaves = 8
 					persistence = 0.5
