--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Ike.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Ike.cfg
@@ -9,8 +9,8 @@
 		{
 			description = Ike is a relatively large, grey object occasionally seen orbiting Duna.Scientists have postulated that Ike is seemingly perfectly positioned to sneakily interfere with any object that presumes to come orbiting near its parent.
 			radius = 130000
-			geeASL = 0.112000003457069
-			mass = 2.78219487161283E+20
+			geeASL = 0.112038263210561
+			mass = 2.78216152235874E+20
 			gravParameter = 18568368573.144
 			rotates = True
 			rotationPeriod = 65517.8621348081
@@ -32,56 +32,56 @@
 			exactSearch = False
 			useTheInName = False
 			selectable = True
-			hiddenRnD = False
+			RDVisibility = VISIBLE
 			Biomes
 			{
 				Biome
 				{
 					name = Polar Lowlands
 					value = 0
-					color = 0,0.9882353,1,1
+					color = 0,0.988235295,1,1
 				}
 				Biome
 				{
 					name = Midlands
 					value = 0
-					color = 0.6588235,0,1,1
+					color = 0.65882355,0,1,1
 				}
 				Biome
 				{
 					name = Eastern Mountain Ridge
 					value = 0
-					color = 1,0.02352941,0,1
+					color = 1,0.0235294122,0,1
 				}
 				Biome
 				{
 					name = Western Mountain Ridge
 					value = 0
-					color = 1,0.5176471,0,1
+					color = 1,0.517647088,0,1
 				}
 				Biome
 				{
 					name = Lowlands
 					value = 0
-					color = 0.9647059,1,0,1
+					color = 0.964705884,1,0,1
 				}
 				Biome
 				{
 					name = South Eastern Mountain Range
 					value = 0
-					color = 1,0,0.8941177,1
+					color = 1,0,0.894117653,1
 				}
 				Biome
 				{
 					name = South Pole
 					value = 0
-					color = 0.4705882,1,0,1
+					color = 0.470588237,1,0,1
 				}
 				Biome
 				{
 					name = Central Mountain Range
 					value = 0
-					color = 0.09411765,0,1,1
+					color = 0.0941176489,0,1,1
 				}
 			}
 			ScienceValues
@@ -108,7 +108,7 @@
 			meanAnomalyAtEpoch = 1.70000004768372
 			meanAnomalyAtEpochD = 97.4028279043159
 			epoch = 0
-			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			color = 1,1,1,1
 			cameraSmaRatioBounds = 0.03 25
 		}
 		ScaledVersion
@@ -278,7 +278,7 @@
 				{
 					blend = 0.05
 					colorStart = 0,0,0,0
-					colorEnd = 0.7910448,0.7910448,0.7910448,0
+					colorEnd = 0.791044772,0.791044772,0.791044772,0
 					frequency = 2
 					octaves = 2
 					persistence = 0.5
@@ -437,7 +437,7 @@
 							science = False
 							Material
 							{
-								color = 0.6791044,0.6791044,0.6791044,1
+								color = 0.679104447,0.679104447,0.679104447,1
 								mainTex = BUILTIN/lunar cliff face
 								mainTexScale = 1,1
 								mainTexOffset = 0,0
