--- a/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Jool.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/KittopiaExports/Jool.cfg
@@ -9,8 +9,8 @@
 		{
 			description = Jool is particularly known for being a rather large, predominantly green planet. Kerbalkind has longed to visit it since it was first spotted in the sky. Philosophers reason that the swirling green planet must be a really nice place to visit, on account of its wholesome coloration.If you look at Jool through a telescope, it is fuzzy.
 			radius = 6000000
-			geeASL = 0.800000011920929
-			mass = 4.23326347332927E+24
+			geeASL = 0.800273295870079
+			mass = 4.23321273059351E+24
 			gravParameter = 282528004209995
 			rotates = True
 			rotationPeriod = 36000
@@ -31,7 +31,7 @@
 			exactSearch = False
 			useTheInName = False
 			selectable = True
-			hiddenRnD = False
+			RDVisibility = VISIBLE
 			ScienceValues
 			{
 				landedDataValue = 30
@@ -56,7 +56,7 @@
 			meanAnomalyAtEpoch = 0.100000001490116
 			meanAnomalyAtEpochD = 5.72957803668559
 			epoch = 0
-			color = 0.4078431,0.4156863,0.4156863,0.5019608
+			color = 1,1,1,1
 			cameraSmaRatioBounds = 0.03 25
 		}
 		Atmosphere
@@ -75,8 +75,8 @@
 			temperatureCurveIsNormalized = False
 			temperatureLapseRate = 0.001
 			temperatureSeaLevel = 200
-			ambientColor = 0.07548209,0.2089552,0.06861217,1
-			lightColor = 0.6745098,0.5960785,0.8509804,0
+			ambientColor = 0.0754820928,0.208955199,0.0686121732,1
+			lightColor = 0.674509823,0.596078455,0.850980401,0
 			addAFG = True
 			pressureCurve
 			{
@@ -137,7 +137,7 @@
 				ESun = 30
 				g = -0.85
 				innerRadius = 5996250
-				invWaveLength = 4.83111,7.921114,1.906873,0.5
+				invWaveLength = 4.83110952,7.92111444,1.90687299,0.5
 				Km = 0.00015
 				Kr = 0.00125
 				outerRadius = 6150000
@@ -145,7 +145,7 @@
 				scale = 0.03902439
 				scaleDepth = -0.25
 				transformScale = 0,0,0
-				waveLength = 0.6745098,0.5960785,0.8509804,0
+				waveLength = 0.674509823,0.596078455,0.850980401,0
 				outerRadiusMult = 1.025
 				innerRadiusMult = 0.975
 			}
@@ -159,7 +159,7 @@
 			deferMesh = False
 			Material
 			{
-				color = 0.7910448,0.7910448,0.7910448,1
+				color = 0.791044772,0.791044772,0.791044772,1
 				specColor = 0,0,0,1
 				shininess = 1
 				texture = BUILTIN/gas1_clouds
@@ -176,7 +176,7 @@
 				rimColorRamp = BUILTIN/gas1_atmogradiant
 				rimColorRampScale = 1,1
 				rimColorRampOffset = 0,0
-				localLightDirection = -0.9999821,-1.304649E-07,0.005992532,0
+				localLightDirection = -0.85660249,0.143874586,0.495512158,0
 				resourceMapScale = 1,1
 				resourceMapOffset = 0,0
 			}
